--- a/Website Layout For Copying/index.html
+++ b/Website Layout For Copying/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home Page</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     
 </head>
 <body>
@@ -21,14 +22,33 @@
             <li><a href="assignments/assignment4.html">Assignment 4</a></li>
             <li><a href="assignments/assignment5.html">Assignment 5</a></li>
             <li><a href="assignments/assignment6.html">Assignment 6</a></li>
-
         </ul>
     </nav>
     
     <!--Main Area-->
-    <div id="main">
+    <div class="main">
         <h1>About</h1>
     </div>
 
+    <div class="plainBodyTextContainer">
+        <div class="plainleftSidebox">
+        </div>
+        <div class="plainBodyBox" id="plainBodyBox">
+          <p>
+              This is the new homepage and the about me page.<br><br>
+              I decided to completely redo the website layout because my previous website was not scaling properly on different displays. This website heavily makes use of CSS Flexboxes.<br><br>
+              My name is Nawal Ahmed, I am a fourth year student at Kennesaw State University majoring in Computer Science set to graduate this coming Fall semester. I currently intern at a banking company and help make programs that automate certain tasks. It is a great internship so far and I hope to get an actual job in that company soon. I have a variety of interests in computer related fields especially automation that can help make our lives easier. Some of the interests include networking, UNIX systems, scripting, and other back-end development operations. Aside from that, my hobbies are cooking, reading, and traveling.<br><br>
+              The bottom picture is of me at Washington D.C. last winter.
+          </p>
+        </div>
+        <div class="plainrightSidebox">
+        </div>
+      </div>
+
+    <img id="profilePicture" src="profilepicture.png" alt="Profile Picture"> 
+
+    <footer>
+        <p class="author">Made by Nawal Ahmed <br> Internet Programming Summer Class 2019</p>
+    </footer>
 </body>
 </html>
