--- a/Website Layout For Copying/assignments/assignment1.html
+++ b/Website Layout For Copying/assignments/assignment1.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Assignment 1</title>
     <link rel="stylesheet" href="../style.css">
+    <script src="../script.js"></script>
     
 </head>
 <body>
@@ -21,14 +22,19 @@
             <li><a href="../assignments/assignment4.html">Assignment 4</a></li>
             <li><a href="../assignments/assignment5.html">Assignment 5</a></li>
             <li><a href="../assignments/assignment6.html">Assignment 6</a></li>
-
         </ul>
     </nav>
     
     <!--Main Area-->
-    <div id="main">
+    <div class="main">
         <h1>Assignment 1</h1>
+        <p>Assignment 1 consists of the entire basic personal web page that was due on June 7th.<br><br>
+            The entire web layout has been redone with flexboxes for proper scaling.
+        </p>
     </div>
 
+    <footer>
+        <p class="author">Made by Nawal Ahmed <br> Internet Programming Summer Class 2019</p>
+    </footer>
 </body>
 </html>
