--- a/Website Layout For Copying/assignments/assignment1.html
+++ b/Website Layout For Copying/assignments/assignment1.html
@@ -33,8 +33,8 @@
         </p>
     </div>
 
-    <footer>
-        <p class="author">Made by Nawal Ahmed <br> Internet Programming Summer Class 2019</p>
+    <footer id="footer">
+        <p>Made by Nawal Ahmed <br> Internet Programming Summer Class 2019</p>
     </footer>
 </body>
 </html>
