--- a/Website Layout For Copying/assignments/assignment2.html
+++ b/Website Layout For Copying/assignments/assignment2.html
@@ -75,8 +75,8 @@
         </div>
       </div>
 
-      <footer>
-          <p class="author">Made by Nawal Ahmed <br> Internet Programming Summer Class 2019</p>
+      <footer id="footer">
+          <p>Made by Nawal Ahmed <br> Internet Programming Summer Class 2019</p>
       </footer>
 </body>
 </html>
