--- a/Website Layout For Copying/assignments/assignment4.html
+++ b/Website Layout For Copying/assignments/assignment4.html
@@ -31,8 +31,8 @@
         <p>Assignment 4 has not yet been complete.</p>
     </div>
 
-    <footer>
-        <p class="author">Made by Nawal Ahmed <br> Internet Programming Summer Class 2019</p>
+    <footer id="footer">
+        <p>Made by Nawal Ahmed <br> Internet Programming Summer Class 2019</p>
     </footer>
 </body>
 </html>
