--- a/Website Layout For Copying/index.html
+++ b/Website Layout For Copying/index.html
@@ -40,15 +40,16 @@
               My name is Nawal Ahmed, I am a fourth year student at Kennesaw State University majoring in Computer Science set to graduate this coming Fall semester. I currently intern at a banking company and help make programs that automate certain tasks. It is a great internship so far and I hope to get an actual job in that company soon. I have a variety of interests in computer related fields especially automation that can help make our lives easier. Some of the interests include networking, UNIX systems, scripting, and other back-end development operations. Aside from that, my hobbies are cooking, reading, and traveling.<br><br>
               The bottom picture is of me at Washington D.C. last winter.
           </p>
+		  
+		  <img id="profilePicture" src="images/profilepicture.png" alt="Profile Picture"> 
+		  
         </div>
         <div class="plainrightSidebox">
         </div>
       </div>
 
-    <img id="profilePicture" src="profilepicture.png" alt="Profile Picture"> 
-
-    <footer>
-        <p class="author">Made by Nawal Ahmed <br> Internet Programming Summer Class 2019</p>
+    <footer id="footer">
+        <p>Made by Nawal Ahmed <br> Internet Programming Summer Class 2019</p>
     </footer>
 </body>
 </html>
