--- a/Updated Website Layout For Copying/index.html
+++ b/Updated Website Layout For Copying/index.html
@@ -48,7 +48,7 @@
         </div>
       </div>
 
-    <footer id="footer">
+    <footer id="footerIndex">
         <p>Made by Nawal Ahmed <br> Internet Programming Summer Class 2019</p>
     </footer>
 </body>
