--- a/Updated Website Layout For Copying/assignments/assignment3.html
+++ b/Updated Website Layout For Copying/assignments/assignment3.html
@@ -14,6 +14,7 @@
     <nav class="topMenuBar">
         <!--Create top menu bar links (Under the span)-->
         <!--../ Goes down a directory. You can chain them. ../../ for going down two directories-->
+        <!--Unordered list for navigation-->
         <ul class="topMenuBar-nav">
             <li><a href="../index.html">Home</a></li>
             <li><a href="../assignments/assignment1.html">Assignment 1</a></li>
@@ -31,6 +32,7 @@
         <p>Assignment 3 has not yet been complete.</p>
     </div>
 
+    <!--Footer-->
     <footer id="footer">
         <p>Made by Nawal Ahmed <br> Internet Programming Summer Class 2019</p>
     </footer>
