--- a/Updated Website Layout For Copying/index.html
+++ b/Updated Website Layout For Copying/index.html
@@ -1,3 +1,6 @@
+<!--Author: Nawal Ahmed
+    Class: Internet Programming Summer 2019-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,6 +17,7 @@
     <nav class="topMenuBar">
         <!--Create top menu bar links (Under the span)-->
         <!--../ Goes down a directory. You can chain them. ../../ for going down two directories-->
+        <!--Unordered list for navigation-->
         <ul class="topMenuBar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="assignments/assignment1.html">Assignment 1</a></li>
@@ -31,8 +35,10 @@
     </div>
 
     <div class="plainBodyTextContainer">
+        <!--Empty left flexbox-->
         <div class="plainleftSidebox">
         </div>
+        <!--center flexbox for primary content-->
         <div class="plainBodyBox" id="plainBodyBox">
           <p>
               This is the new homepage and the about me page.<br><br>
@@ -40,14 +46,16 @@
               My name is Nawal Ahmed, I am a fourth year student at Kennesaw State University majoring in Computer Science set to graduate this coming Fall semester. I currently intern at a banking company and help make programs that automate certain tasks. It is a great internship so far and I hope to get an actual job in that company soon. I have a variety of interests in computer related fields especially automation that can help make our lives easier. Some of the interests include networking, UNIX systems, scripting, and other back-end development operations. Aside from that, my hobbies are cooking, reading, and traveling.<br><br>
               The bottom picture is of me at Washington D.C. last winter.
           </p>
-		  
-		  <img id="profilePicture" src="images/profilepicture.png" alt="Profile Picture"> 
-		  
         </div>
+        <!--Empty right flexbox-->
         <div class="plainrightSidebox">
         </div>
       </div>
 
+    <!--Profile Picture-->
+    <img id="profilePicture" src="images/profilepicture.png" alt="Profile Picture"> 
+
+    <!--Footer-->
     <footer id="footerIndex">
         <p>Made by Nawal Ahmed <br> Internet Programming Summer Class 2019</p>
     </footer>
