increase button size

--- a/Assignment 2/Solution/index.html
+++ b/Assignment 2/Solution/index.html
@@ -34,7 +34,7 @@
   
     <div class="box-2">
       <p id=foregroundText>
-        <span style="color:black;font-weight:bold">Foreground</span>
+        <span style="color:black;font-weight:bold">Foreground</span>&nbsp
         <button class=buttonColorSwitcher type="button" onClick="fAfunction()" id=buttonFA>A</button>
         <button class=buttonColorSwitcher type="button" onClick="fBfunction()" id=buttonFB>B</button> 
         <button class=buttonColorSwitcher type="button" onClick="fCfunction()" id=buttonFC>C</button> 
