--- a/Updated Website Layout For Copying/assignments/assignment2.html
+++ b/Updated Website Layout For Copying/assignments/assignment2.html
@@ -56,7 +56,7 @@
         <div class="box-2">
           <p id=foregroundText>
             <!--Foreground text-->
-            <span style="color:black;font-weight:bold">Foreground</span>
+            <span style="color:black;font-weight:bold">Foreground</span>&nbsp
             <!--5 buttons for switching & functions that are in JavaScript-->
             <button class=buttonColorSwitcher type="button" onClick="fAfunction()" id=buttonFA>A</button>
             <button class=buttonColorSwitcher type="button" onClick="fBfunction()" id=buttonFB>B</button> 
